// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/TimePicker Default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <div
      className="iot--time-picker this that"
      data-testid="time-picker"
      onBlur={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <div
        className="iot--time-picker__wrapper iot--time-picker__wrapper-md"
      >
        <div
          className="bx--form-item bx--text-input-wrapper"
        >
          <label
            className="bx--label"
            htmlFor="time-picker"
          >
            Start
          </label>
          <div
            className="bx--text-input__field-outer-wrapper"
          >
            <div
              className="bx--text-input__field-wrapper"
              data-invalid={null}
            >
              <input
                className="bx--text-input bx--text-input--md"
                data-testid="time-picker-input"
                disabled={false}
                id="time-picker"
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                pattern={/\\[0-9: APM\\]/}
                placeholder="hh:mm"
                readOnly={false}
                title="hh:mm"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Open time picker"
          className="iot--time-picker__icon"
          data-testid="time-picker-time-btn"
          onClick={[Function]}
          tabIndex="0"
          title="Open time picker"
          type="button"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable={false}
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
            />
            <path
              d="M20.59 22L15 16.41 15 7 17 7 17 15.58 22 20.59 20.59 22z"
            />
          </svg>
        </button>
      </div>
      <p
        className="bx--form__helper-text"
        data-testid="time-picker-helpertext"
      >
        This is some helper text
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/TimePicker List spinner 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--list-spinner__section"
    data-testid="list-spinner"
  >
    <button
      aria-describedby={null}
      aria-pressed={null}
      className="iot--list-spinner__btn undefined-spinner__btn iot--btn bx--btn bx--btn--ghost"
      data-testid="list-spinner-prev-btn"
      disabled={false}
      id="iot--list-spinner__btn--up"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="Previous item"
        className="bx--btn__icon"
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 5L13 10 12.3 10.7 8 6.4 3.7 10.7 3 10z"
        />
      </svg>
    </button>
    <div
      className="iot--list-spinner__list-container undefined-spinner__list-container"
    >
      <ul
        className="iot--list-spinner__list undefined-spinner__list"
        data-testid="list-spinner-list"
        onKeyDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
      >
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="01-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="01"
            disabled={false}
            id="01"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            01
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="02-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="02"
            disabled={false}
            id="02"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            02
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item iot--list-spinner__list-item--selected"
          data-selected={true}
          data-testid="list-spinner-list-item"
          id="03-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="list-spinner-selected-item"
            disabled={false}
            id="03"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            03
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="04-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="04"
            disabled={false}
            id="04"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            04
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="05-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="05"
            disabled={false}
            id="05"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            05
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="06-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="06"
            disabled={false}
            id="06"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            06
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="07-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="07"
            disabled={false}
            id="07"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            07
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="08-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="08"
            disabled={false}
            id="08"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            08
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="09-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="09"
            disabled={false}
            id="09"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            09
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="10-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="10"
            disabled={false}
            id="10"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            10
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="11-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="11"
            disabled={false}
            id="11"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            11
          </button>
        </li>
        <li
          className="iot--list-spinner__list-item"
          data-selected={false}
          data-testid="list-spinner-list-item"
          id="12-list-item"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="12"
            disabled={false}
            id="12"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            12
          </button>
        </li>
      </ul>
    </div>
    <button
      aria-describedby={null}
      aria-pressed={null}
      className="iot--list-spinner__btn undefined-spinner__btn iot--btn bx--btn bx--btn--ghost"
      data-testid="list-spinner-next-btn"
      disabled={false}
      id="iot--list-spinner__btn--down"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="Next item"
        className="bx--btn__icon"
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/TimePicker TimePicker spinner 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--time-picker-spinner"
    data-testid="time-picker-spinner"
    style={
      Object {
        "left": "100px",
        "top": "100px",
      }
    }
  >
    <div
      className="iot--list-spinner__section"
      data-testid="time-picker-spinner-list-spinner-1"
    >
      <button
        aria-describedby={null}
        aria-pressed={null}
        className="iot--list-spinner__btn undefined-spinner__btn iot--btn bx--btn bx--btn--ghost"
        data-testid="time-picker-spinner-list-spinner-1-prev-btn"
        disabled={false}
        id="iot--list-spinner__btn--up"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="Previous item"
          className="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 5L13 10 12.3 10.7 8 6.4 3.7 10.7 3 10z"
          />
        </svg>
      </button>
      <div
        className="iot--list-spinner__list-container undefined-spinner__list-container"
      >
        <ul
          className="iot--list-spinner__list undefined-spinner__list"
          data-testid="time-picker-spinner-list-spinner-1-list"
          onKeyDown={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onWheel={[Function]}
        >
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="01-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="01"
              disabled={false}
              id="01"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              01
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="02-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="02"
              disabled={false}
              id="02"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              02
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item iot--list-spinner__list-item--selected"
            data-selected={true}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="03-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="time-picker-spinner-list-spinner-1-selected-item"
              disabled={false}
              id="03"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              03
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="04-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="04"
              disabled={false}
              id="04"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              04
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="05-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="05"
              disabled={false}
              id="05"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              05
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="06-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="06"
              disabled={false}
              id="06"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              06
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="07-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="07"
              disabled={false}
              id="07"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              07
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="08-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="08"
              disabled={false}
              id="08"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              08
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="09-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="09"
              disabled={false}
              id="09"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              09
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="10-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="10"
              disabled={false}
              id="10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              10
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="11-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="11"
              disabled={false}
              id="11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              11
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-1-list-item"
            id="12-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="12"
              disabled={false}
              id="12"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              12
            </button>
          </li>
        </ul>
      </div>
      <button
        aria-describedby={null}
        aria-pressed={null}
        className="iot--list-spinner__btn undefined-spinner__btn iot--btn bx--btn bx--btn--ghost"
        data-testid="time-picker-spinner-list-spinner-1-next-btn"
        disabled={false}
        id="iot--list-spinner__btn--down"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="Next item"
          className="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </button>
    </div>
    <div
      className="iot--list-spinner__section"
      data-testid="time-picker-spinner-list-spinner-2"
    >
      <button
        aria-describedby={null}
        aria-pressed={null}
        className="iot--list-spinner__btn undefined-spinner__btn iot--btn bx--btn bx--btn--ghost"
        data-testid="time-picker-spinner-list-spinner-2-prev-btn"
        disabled={false}
        id="iot--list-spinner__btn--up"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="Previous item"
          className="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 5L13 10 12.3 10.7 8 6.4 3.7 10.7 3 10z"
          />
        </svg>
      </button>
      <div
        className="iot--list-spinner__list-container undefined-spinner__list-container"
      >
        <ul
          className="iot--list-spinner__list undefined-spinner__list"
          data-testid="time-picker-spinner-list-spinner-2-list"
          onKeyDown={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onWheel={[Function]}
        >
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="28-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="28"
              disabled={false}
              id="28"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              28
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="29-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="29"
              disabled={false}
              id="29"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              29
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item iot--list-spinner__list-item--selected"
            data-selected={true}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="30-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="time-picker-spinner-list-spinner-2-selected-item"
              disabled={false}
              id="30"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              30
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="31-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="31"
              disabled={false}
              id="31"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              31
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="32-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="32"
              disabled={false}
              id="32"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              32
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="33-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="33"
              disabled={false}
              id="33"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              33
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="34-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="34"
              disabled={false}
              id="34"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              34
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="35-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="35"
              disabled={false}
              id="35"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              35
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="36-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="36"
              disabled={false}
              id="36"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              36
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="37-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="37"
              disabled={false}
              id="37"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              37
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="38-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="38"
              disabled={false}
              id="38"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              38
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="39-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="39"
              disabled={false}
              id="39"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              39
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="40-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="40"
              disabled={false}
              id="40"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              40
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="41-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="41"
              disabled={false}
              id="41"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              41
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="42-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="42"
              disabled={false}
              id="42"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              42
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="43-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="43"
              disabled={false}
              id="43"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              43
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="44-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="44"
              disabled={false}
              id="44"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              44
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="45-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="45"
              disabled={false}
              id="45"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              45
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="46-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="46"
              disabled={false}
              id="46"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              46
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="47-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="47"
              disabled={false}
              id="47"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              47
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="48-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="48"
              disabled={false}
              id="48"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              48
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="49-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="49"
              disabled={false}
              id="49"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              49
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="50-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="50"
              disabled={false}
              id="50"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              50
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="51-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="51"
              disabled={false}
              id="51"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              51
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="52-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="52"
              disabled={false}
              id="52"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              52
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="53-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="53"
              disabled={false}
              id="53"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              53
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="54-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="54"
              disabled={false}
              id="54"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              54
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="55-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="55"
              disabled={false}
              id="55"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              55
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="56-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="56"
              disabled={false}
              id="56"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              56
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="57-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="57"
              disabled={false}
              id="57"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              57
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="58-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="58"
              disabled={false}
              id="58"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              58
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="59-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="59"
              disabled={false}
              id="59"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              59
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="00-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="00"
              disabled={false}
              id="00"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              00
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="01-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="01"
              disabled={false}
              id="01"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              01
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="02-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="02"
              disabled={false}
              id="02"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              02
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="03-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="03"
              disabled={false}
              id="03"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              03
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="04-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="04"
              disabled={false}
              id="04"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              04
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="05-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="05"
              disabled={false}
              id="05"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              05
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="06-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="06"
              disabled={false}
              id="06"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              06
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="07-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="07"
              disabled={false}
              id="07"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              07
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="08-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="08"
              disabled={false}
              id="08"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              08
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="09-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="09"
              disabled={false}
              id="09"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              09
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="10-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="10"
              disabled={false}
              id="10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              10
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="11-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="11"
              disabled={false}
              id="11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              11
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="12-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="12"
              disabled={false}
              id="12"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              12
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="13-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="13"
              disabled={false}
              id="13"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              13
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="14-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="14"
              disabled={false}
              id="14"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              14
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="15-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="15"
              disabled={false}
              id="15"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              15
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="16-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="16"
              disabled={false}
              id="16"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              16
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="17-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="17"
              disabled={false}
              id="17"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              17
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="18-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="18"
              disabled={false}
              id="18"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              18
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="19-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="19"
              disabled={false}
              id="19"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              19
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="20-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="20"
              disabled={false}
              id="20"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              20
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="21-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="21"
              disabled={false}
              id="21"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              21
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="22-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="22"
              disabled={false}
              id="22"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              22
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="23-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="23"
              disabled={false}
              id="23"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              23
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="24-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="24"
              disabled={false}
              id="24"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              24
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="25-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="25"
              disabled={false}
              id="25"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              25
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="26-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="26"
              disabled={false}
              id="26"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              26
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-2-list-item"
            id="27-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="27"
              disabled={false}
              id="27"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              27
            </button>
          </li>
        </ul>
      </div>
      <button
        aria-describedby={null}
        aria-pressed={null}
        className="iot--list-spinner__btn undefined-spinner__btn iot--btn bx--btn bx--btn--ghost"
        data-testid="time-picker-spinner-list-spinner-2-next-btn"
        disabled={false}
        id="iot--list-spinner__btn--down"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="Next item"
          className="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </button>
    </div>
    <div
      className="iot--list-spinner__section iot--time-picker-spinner-last-list-spinner"
      data-testid="time-picker-spinner-list-spinner-3"
    >
      <button
        aria-describedby={null}
        aria-pressed={null}
        className="iot--list-spinner__btn iot--time-picker-spinner-last-list-spinner-spinner__btn iot--btn bx--btn bx--btn--ghost"
        data-testid="time-picker-spinner-list-spinner-3-prev-btn"
        disabled={false}
        id="iot--list-spinner__btn--up"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="Previous item"
          className="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 5L13 10 12.3 10.7 8 6.4 3.7 10.7 3 10z"
          />
        </svg>
      </button>
      <div
        className="iot--list-spinner__list-container iot--time-picker-spinner-last-list-spinner-spinner__list-container"
      >
        <ul
          className="iot--list-spinner__list iot--time-picker-spinner-last-list-spinner-spinner__list"
          data-testid="time-picker-spinner-list-spinner-3-list"
          onKeyDown={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onWheel={[Function]}
        >
          <li
            className="iot--list-spinner__list-item iot--list-spinner__list-item--selected"
            data-selected={true}
            data-testid="time-picker-spinner-list-spinner-3-list-item"
            id="AM-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="time-picker-spinner-list-spinner-3-selected-item"
              disabled={false}
              id="AM"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              AM
            </button>
          </li>
          <li
            className="iot--list-spinner__list-item"
            data-selected={false}
            data-testid="time-picker-spinner-list-spinner-3-list-item"
            id="PM-list-item"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--ghost"
              data-testid="PM"
              disabled={false}
              id="PM"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={-1}
              type="button"
            >
              PM
            </button>
          </li>
        </ul>
      </div>
      <button
        aria-describedby={null}
        aria-pressed={null}
        className="iot--list-spinner__btn iot--time-picker-spinner-last-list-spinner-spinner__btn iot--btn bx--btn bx--btn--ghost"
        data-testid="time-picker-spinner-list-spinner-3-next-btn"
        disabled={false}
        id="iot--list-spinner__btn--down"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="Next item"
          className="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
